<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:paddingTop="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edit_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp">
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language1"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edit_word1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language2"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edit_word2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>