<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.HelperActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/colorPrimary">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="27dp"
                    android:layout_marginEnd="190dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/help"
                    android:tint="@color/background" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/how_to_play"
                    android:textColor="@color/background"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="75dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/app_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="9dp"
                    android:layout_marginBottom="9dp"
                    android:background="@drawable/round_rectangle_left"
                    android:backgroundTint="@color/background"
                    android:elevation="6dp"
                    android:lineSpacingExtra="5dp"
                    android:paddingStart="15dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="10dp"
                    android:text="@string/sudoku_intro" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="180dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/pop_up_shape"
                    android:backgroundTint="@color/help_color1"
                    android:elevation="5dp"
                    android:padding="7dp"
                    android:text="@string/reading_mode"
                    android:textColor="@color/background"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/pop_up_shape"
                    android:elevation="5dp"
                    android:lineSpacingExtra="7dp"
                    android:padding="20dp"
                    android:text="@string/reading_mode_cont"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/pop_up_shape"
                    android:backgroundTint="@color/help_color"
                    android:elevation="5dp"
                    android:padding="7dp"
                    android:text="@string/listening_mode"
                    android:textColor="@color/background"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/pop_up_shape"
                    android:elevation="5dp"
                    android:lineSpacingExtra="7dp"
                    android:padding="20dp"
                    android:text="@string/listening_mode_cont"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/pop_up_shape"
                    android:backgroundTint="@color/help_color2"
                    android:elevation="5dp"
                    android:padding="7dp"
                    android:text="@string/word_score"
                    android:textColor="@color/background"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/pop_up_shape"
                    android:elevation="5dp"
                    android:lineSpacingExtra="7dp"
                    android:padding="20dp"
                    android:text="@string/word_score_cont"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/pop_up_shape"
                    android:backgroundTint="@color/colorPrimary"
                    android:elevation="5dp"
                    android:padding="7dp"
                    android:text="@string/import_csv"
                    android:textColor="@color/background"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/pop_up_shape"
                    android:elevation="5dp"
                    android:lineSpacingExtra="7dp"
                    android:padding="20dp"
                    android:text="@string/import_csv_cont"
                    android:textSize="16sp" />
            </LinearLayout>
        </FrameLayout>
    </ScrollView>
</FrameLayout>