<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.GameStartActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/colorPrimary">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_game"
                    android:textColor="@color/background"
                    android:textSize="30sp"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="60dp"
                    android:textStyle="bold" />
            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@drawable/pop_up_shape"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:elevation="7dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="110dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/textview_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="@string/grid_size"
                            android:textSize="19sp"
                            android:textStyle="bold" />
                        <SeekBar
                            android:id="@+id/seek_bar_2"
                            style="@style/Widget.AppCompat.SeekBar.Discrete"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:layout_gravity="bottom|center_horizontal"
                            android:max="3"
                            android:theme="@style/AppTheme" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    android:background="@drawable/pop_up_shape"
                    android:elevation="7dp"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp" android:paddingStart="23dp"
                    android:paddingEnd="23dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/language_mode"
                            android:textSize="19sp"
                            android:textStyle="bold" />
                        <Spinner
                            android:id="@+id/spinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:spinnerMode="dialog" />
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_gravity="center_horizontal"
                        android:alpha="0.2"
                        android:background="#7A5C5C5C" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/game_mode"
                            android:textSize="19sp"
                            android:textStyle="bold" />
                        <RadioGroup
                            android:id="@+id/radioGroupMode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="5dp"
                            android:theme="@style/AppTheme">
                            <RadioButton
                                android:id="@+id/radioRead"
                                style="@android:style/Widget.CompoundButton.RadioButton"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:layout_marginStart="15dp"
                                android:checked="true"
                                android:text="@string/read_mode"
                                android:textColor="@color/subgrid"/>
                            <RadioButton
                                android:id="@+id/radioListen"
                                style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                                android:layout_width="0dp"
                                android:layout_marginStart="8dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/listen_mode"
                                android:textColor="@color/subgrid"/>
                        </RadioGroup>
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_gravity="center_horizontal"
                        android:alpha="0.2"
                        android:background="#7A5C5C5C" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/textViewDif"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="@string/difficulty1"
                            android:textSize="19sp"
                            android:textStyle="bold" />
                        <SeekBar
                            android:id="@+id/seekBar"
                            style="@style/Widget.AppCompat.SeekBar.Discrete"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:layout_gravity="bottom|center_horizontal"
                            android:max="3"
                            android:theme="@style/AppTheme" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/pop_up_shape"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:elevation="7dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp">
                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:id="@+id/checkboxs"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="20dp">


                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>
                <Button
                    android:id="@+id/button_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@drawable/button"
                    android:text="@string/start"
                    android:textColor="@color/background"
                    android:textStyle="bold" />
            </LinearLayout>
        </FrameLayout>
    </ScrollView>
</FrameLayout>